fix weird jumping when moving todos

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -168,7 +168,7 @@ header {
     padding: 1rem 1.25rem;
     border-bottom: 1px solid var(--border);
     position: relative;
-    transition: all 0.3s ease;
+    // transition: border-color 0.3s ease;
 
     &:hover {
       cursor: pointer;
